--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>zagol</title>
 </head>
 <body>
-   body 
+    <div>body</div>
 </body>
 </html>
